WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300155
[JSC] Fix WASM GC array.get on x86_64 Assert builds
https://bugs.webkit.org/show_bug.cgi?id=300155
Summary
[JSC] Fix WASM GC array.get on x86_64 Assert builds
Dan Hecht
Reported
2025-10-03 18:09:27 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-03 18:09:36 PDT
<
rdar://problem/161932678
>
Dan Hecht
Comment 2
2025-10-03 18:12:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51795
EWS
Comment 3
2025-10-04 08:28:54 PDT
Committed
301001@main
(e582db95f9ef): <
https://commits.webkit.org/301001@main
> Reviewed commits have been landed. Closing PR #51795 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug