[JSC] Fix WASM GC array.get on x86_64 Assert builds https://bugs.webkit.org/show_bug.cgi?id=300155 rdar://161932678

Reviewed by Yusuke Suzuki.

a4 is not really available for these slow path calls and on x86_64
with ASSERT_ENABLED, it gets used to do a stack check causing
the last argument to get clobbered.

Instead, let's pass the arguments via the stack.

Testing: JSTests/wasm/gc/simd.js with Assert build

* Source/JavaScriptCore/llint/InPlaceInterpreter64.asm:
* Source/JavaScriptCore/wasm/WasmIPIntSlowPaths.cpp:
(JSC::IPInt::WASM_IPINT_EXTERN_CPP_DECL):
* Source/JavaScriptCore/wasm/WasmIPIntSlowPaths.h:

Canonical link: https://commits.webkit.org/301001@main